<resources>
    <string name="app_name">Weather</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>
    <string name="menu_weather">Weather</string>
    <string name="settings_change_city">Change city</string>

    <string name="yandex_task">Task for the first stage of Yandex Mobilization school</string>
    <string name="dev_name">Aleksandr Chichkanov</string>

    <string name="weather_temperature">%1$d°</string>
    <string name="weather_temperature_minmax">%1$d° / %2$d°</string>
    <string name="weather_wind_speed">%1$d m/s</string>
    <string name="weather_humidity">%1$d%%</string>
    <string name="weather_latest_update_time">Latest update: %1$s</string>

    <string name="settings_auto_update">Auto update interval</string>
    <string name="message_no_internet">No internet connection</string>
    <string name="weather_error">Error ☹</string>
    <string name="iv_weather_humidity_icon">Humidity icon</string>
    <string name="iv_weather_wind_icon_info">Wind icon</string>
    <string name="iv_weather_icon_info">Weather icon</string>

    <string-array name="refresh_entries">
        <item>Never</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>2 hours</item>
        <item>6 hours</item>
        <item>12 hours</item>
        <item>1 day</item>
    </string-array>
    <string-array name="refresh_values">
        <item>0</item>
        <item>30</item>
        <item>60</item>
        <item>120</item>
        <item>360</item>
        <item>720</item>
        <item>1440</item>
    </string-array>


    <string name="change_city_hint">Enter the name of the city</string>
    <string name="default_city">Moscow</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="add_city">Add city</string>

    <string name="pressure">%s hPa\nPressure</string>
    <string name="humidity">%s %%\nHumidity</string>
    <string name="wind">%s m/s\nWind speed</string>
    <string name="morning">Morning</string>
    <string name="wind_forecast">%s m/s</string>
    <string name="day">Day</string>
    <string name="evening">Evening</string>
    <string name="night">Night</string>
    <string name="error">An error occurred, check the internet connection and try again</string>
    <string name="city_not_selected">Add a city so you can display the weather</string>
    <string name="version">Version: %s</string>
    <string name="add_city_button">Add city</string>

</resources>
